--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Calculator</title>
-  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
       <button class="btn" id="clear">C</button>
     </div>
   </div>
-  <script src="./src/js/calc.js"></script>
+  <script src="js/calculator.js"></script>
   <!-- <script src="./src/js/script.js"></script>   -->
 
 </body>
